# flipper_training

./: .gitignore  .gitmodules  .pre-commit-config.yaml  dasenka.def  ppo_config.yaml  pyproject.toml  rci_optuna_job_single.sbatch  train_config.py
archive/: engine.py
cli_tools/: configdiff.py  fetch_runs.bash
configs/: __init__.py  base_config.py  engine_config.py  env_config.py  robot_config.py  world_config.py
cross_eval_configs/: barrier_easy.yaml  barrier_hard.yaml  cross_eval_seeds.txt  file_natural.yaml  file_natural_cracks.yaml  file_ridge.yaml  file_sine.yaml  gauss_coarse_easy.yaml  gauss_coarse_fixed.yaml  gauss_coarse_hard.yaml  gauss_fine_easy.yaml  gauss_fine_hard.yaml  stairs_easy.yaml  stairs_hard.yaml  trunk_easy.yaml  trunk_hard.yaml
cross_eval_results/: final_trunk_thesis_training_42_2025-05-09_21-01-13results_eval_incomplete.pkl
engine/: benchmark.py  engine.py  engine_config.py  engine_state.py  robot_model.py
environment/: base_env.py  control_cfg.py  dphysics_env.py  env.py  torchrl_env.py
final_training_configs/: barrier.yaml  barrier_pretrained.yaml  gaussian_coarse.yaml  gaussian_fine.yaml  gaussian_fine_long.yaml  mixed_training.yaml  mixed_training_smoothness.yaml  mixed_training_weighted.yaml  stairs_from_pretrained.yaml  stairs_from_scratch.yaml  stairs_from_scratch_extra_reward.yaml  stairs_pretrained_extra_reward.yaml  trunk.yaml
flipper_training/: __init__.py  train_config.py
heightmap_files/: natural_cracks.pt  natural_simple.pt  ridge.pt  sinus.pt
meshes/: marv.sdf  marv.urdf
misc_benchmarking/: clamp.py  linalg.ipynb  quat_integration.py  where.py
notebooks/: coding_ppo.ipynb  compare_policy_trajectories.ipynb  compare_policy_trajectories_to_action_ensembling.ipynb  cross_eval.ipynb  cross_eval_diff.ipynb  cross_eval_plotting.ipynb  engine_testing.ipynb  (+32 more)
(+384 files in other folders)
