[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flipper_training"
version = "1.0"
authors = [{ name="David Korcak", email="david.korcak@gmail.com" }]
description = "Physics engine and training environment for the robot control"
dependencies = [
    "torch",
    "torchvision",
    "torchrl",
    "trimesh",
    "pyvista",
    "pyacvd",
    "tqdm",
    "matplotlib",
    "plotly",
    "plotly_express",
    "omegaconf"
]


[tool.setuptools.package-dir]
flipper_training = "flipper_training"
